# micro-blog

./: docker-compose.yaml
account-metadata-service/: go.mod  go.sum
account-metadata-service/api/: crud.go  handlers.go
account-metadata-service/app/: main.go
account-metadata-service/app/api/: handlers.go
accounts-service/: go.mod  go.sum
accounts-service/app/: main.go
accounts-service/app/api/: crud.go  handlers.go
accounts-service/app/database/: models.go  mongo.go
auth-helper-service/: Dockerfile  go.mod  main.go
auth-helper-service/app/: main.go
auth-helper-service/middleware/: middleware.go
auth-service/: Dockerfile  go.mod
auth-service/app/: main.go
auth-service/app/middleware/: middleware.go
comments-service/: .gitignore  Dockerfile  package-lock.json  package.json  process.yml
comments-service/src/: app.ts  index.ts
comments-service/src/config/: index.ts  production.ts
comments-service/src/models/: index.ts
comments-service/src/routes/: get-comments.ts
frontend-service/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend-service/e2e/src/: app.e2e-spec.ts
frontend-service/src/app/: app.component.spec.ts
posts-service/: .dockerignore  .flake8  Dockerfile  pyproject.toml  requirements.txt
posts-service/app/: main.py
posts-service/app/api/: crud.py  endpoints.py
posts-service/app/config/: database.py  logs.py
posts-service/app/database/: utils.py
posts-service/app/database/models/: __init__.py  base.py  post.py
posts-service/tests/: test_crud.py  test_main.py
search-service/: package-lock.json  package.json
search-service/src/: app.ts  index.ts
search-service/src/api/: controllers.ts  routes.ts
search-stats-service/: .flake8  .gitignore  pyproject.toml  requirements.txt
search-stats-service/app/: main.py
search-stats-service/tests/: test_root.py
