[tool.poetry]
name = "posts-service"
version = "0.1.0"
description = "Posts service for micro-blog app"
authors = ["Mohammed Mwijaa <mm.mwijaa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.8"
motor = "^2.2.0"
pydantic = {extras = ["email"], version = "^1.6.1"}
python-decouple = "^3.3"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
pytest-cov = "^2.10.0"
pre-commit = "^2.7.1"
requests = "^2.24.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report html"
testpaths = [
	"tests"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
